--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
     },
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "~4.0|~5.0|~5.1|^6.0|^7.0",
-        "laravel/framework": "~5.4|^6.0|^7.0"
+        "illuminate/support": "~4.0|~5.0|~5.1|^6.0|^7.0|^8.0",
+        "laravel/framework": "~5.4|^6.0|^7.0|^8.0"
     },
     "autoload": {
         "classmap": [
