--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }, {
             "name": "Robin Dirksen",
             "email": "robin@famdirksen.nl",
-            "homepage": "https://robindirksen.nl",
+            "homepage": "https://robindirksen.com",
             "role": "Developer"
         }
     ],
